--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,7 @@ num-traits = { version = "0.2.17", default-features = false}
 paste = "1.0.14"
 rtcc = { version = "0.3.0", optional = true }
 stm32-usbd = { version = "0.6.0", optional = true }
-#stm32f3 = { version = "0.15.1", default-features = false }
-stm32f3 = { git = "https://github.com/stm32-rs/stm32-rs-nightlies", default-features = false }
+stm32f3 = { version = "0.16.0", package = "stm32f3-staging", default-features = false }
 void = { version = "1.0.2", default-features = false }
 
 [dev-dependencies]
