--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ stm32f3 = { version = "0.16.0", package = "stm32f3-staging", default-features = 
 void = { version = "1.0.2", default-features = false }
 
 [dev-dependencies]
+cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rtic = "1.1"
 cortex-m-semihosting = "0.5.0"
 defmt = "0.3.5"
@@ -58,6 +59,7 @@ rtt-target = { version = "0.4.0" }
 systick-monotonic = "1.0"
 usb-device = "0.3.1"
 usbd-serial = "0.2.0"
+stm32f3 = { version = "0.16.0", package = "stm32f3-staging" }
 
 [build-dependencies]
 slice-group-by = "0.3.1"
